--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="result"></div>
 
   <script>
-    const members = ["佐藤ち", "寺本", "関口", "亀山", "伊藤🐮","橿林", "谷本", "佐藤ゆ", "亀井", "西山", "平居", "葉上", "藤原"]; // ← メンバーをここに追加！
+    const members = ["佐藤ち🪼", "寺本👓", "関口🐾", "亀山🐳", "伊藤🐮","橿林🦦", "谷本🐻‍❄️", "亀井🦖", "西山🦄", "平居🦔", "葉上🐰", "藤原🐦‍🔥"]; // ← メンバーをここに追加！
 
     function pickFacilitator() {
       const index = Math.floor(Math.random() * members.length);
@@ -38,4 +38,5 @@
 
 </body>
 </html>
+
 
